# ham-net-checkin

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: macos-desktop.yml  windows-desktop.yml
deploy/: ham-checkin.service  nginx-ham-checkin.conf
docs/: ham-checkin-admin-database-v1-handoff.md  ham-checkin-v0.9-project-retrospective.md  ham-checkin-v0.9.01-delivery-summary.md  ham-checkin-v0.9.01-release-notes.md  ham-checkin-v0.9.01-user-manual-en.md  ham-checkin-v0.9.01-user-manual.md  ham-checkin-v1.01.1-user-manual-en.md  ham-checkin-v1.01.1-user-manual.md  ham-checkin-v1.01.1-web-first-test-plan.md  realtime-qso-feed-design.md  vps-deployment-plan.md  windows-desktop-build.md
electron/: legacy-main.cjs  main.mjs
local-proxy/: index.mjs
public/: ham-checkin-v0.9.01-user-manual-en.html  ham-checkin-v0.9.01-user-manual.html  ham-checkin-v1.01.1-user-manual-en.html  ham-checkin-v1.01.1-user-manual.html
scripts/: audit-base-profiles.mjs  build-base-profiles.mjs  copy-base-profiles.mjs  generate-app-icons.mjs  search-base-profiles.mjs
server/: index.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/services/: fmoClient.js  gridAddress.js  hamboxClient.js  localizedAddress.js  mmdvmClient.js
