[package]
name = "ham-checkin-webview"
version = "1.1.1"
description = "HAM 台网点名主控台 WebView 本地版"
authors = ["BH1JSS"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
serde_json = "1.0"
ureq = { version = "2.12.1", features = ["json"] }
base64 = "0.22"
rfd = "0.15"
